--- a/package.json
+++ b/package.json
@@ -6,17 +6,38 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "bot": "nodemon",
+    "ci": "install --frozen-lockfile"
   },
   "dependencies": {
+    "@sentry/node": "^6.8.0",
+    "@sentry/tracing": "^6.8.0",
+    "axios": "^0.21.1",
+    "dotenv": "^10.0.0",
+    "eris": "^0.15.1",
+    "events": "^3.3.0",
+    "ioredis": "^4.27.6",
     "next": "11.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "util": "^0.12.4",
+    "winston": "^3.3.3",
+    "winston-daily-rotate-file": "^4.5.5"
   },
   "devDependencies": {
+    "@types/ioredis": "^4.26.4",
+    "@types/node": "^15.12.5",
     "@types/react": "17.0.11",
+    "@types/tailwindcss": "^2.2.0",
+    "autoprefixer": "^10.2.6",
+    "cross-env": "^7.0.3",
     "eslint": "7.29.0",
     "eslint-config-next": "11.0.1",
+    "nodemon": "^2.0.8",
+    "postcss": "^8.3.5",
+    "tailwindcss": "^2.2.4",
+    "ts-node": "^10.0.0",
     "typescript": "4.3.4"
   }
 }
