--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.2.0",
     "util": "^0.12.4",
     "winston": "^3.3.3",
     "winston-daily-rotate-file": "^4.5.5"
@@ -34,8 +35,10 @@
     "@types/tailwindcss": "^2.2.0",
     "autoprefixer": "^10.2.6",
     "cross-env": "^7.0.3",
-    "eslint": "7.29.0",
-    "eslint-config-next": "11.0.1",
+    "es-abstract": "^1.18.3",
+    "eslint": "^7.30.0",
+    "eslint-config-next": "^11.0.1",
+    "eslint-plugin-react": "^7.24.0",
     "nodemon": "^2.0.8",
     "postcss": "^8.3.5",
     "tailwindcss": "^2.2.4",
