--- a/package.json
+++ b/package.json
@@ -4,22 +4,25 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "generate && next build",
     "start": "next start",
     "lint": "next lint",
     "bot": "nodemon",
-    "ci": "install --frozen-lockfile"
+    "ci": "install --frozen-lockfile",
+    "generate": "ts-node --files src/generate.ts"
   },
   "dependencies": {
     "@headlessui/react": "^1.3.0",
+    "@sentry/nextjs": "^6.8.0",
     "@sentry/node": "^6.8.0",
     "@sentry/tracing": "^6.8.0",
     "axios": "^0.21.1",
     "dotenv": "^10.0.0",
-    "eris": "^0.15.1",
+    "eris": "github:opalarchive/eris#merge",
     "events": "^3.3.0",
     "ioredis": "^4.27.6",
     "next": "11.0.1",
+    "nextjs-redirect": "^5.0.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
@@ -30,11 +33,13 @@
   "devDependencies": {
     "@lhci/cli": "^0.8.0",
     "@types/ioredis": "^4.26.4",
+    "@types/lodash": "^4.14.170",
     "@types/node": "^15.12.5",
     "@types/react": "17.0.11",
     "@types/tailwindcss": "^2.2.0",
     "autoprefixer": "^10.2.6",
     "cross-env": "^7.0.3",
+    "discord-api-types": "^0.19.0-next.836e8fb.1625660936",
     "es-abstract": "^1.18.3",
     "eslint": "^7.30.0",
     "eslint-config-next": "^11.0.1",
