--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@sentry/tracing": "^6.8.0",
     "axios": "^0.21.1",
     "dotenv": "^10.0.0",
-    "eris": "github:opalarchive/eris#merge",
+    "eris": "https://github.com/opalarchive/eris#merge",
     "events": "^3.3.0",
     "ioredis": "^4.27.6",
     "next": "11.0.1",
