--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.3.0",
+    "@next/bundle-analyzer": "^11.0.1",
     "@sentry/nextjs": "^6.8.0",
     "@sentry/node": "^6.8.0",
     "@sentry/tracing": "^6.8.0",
@@ -22,6 +23,7 @@
     "events": "^3.3.0",
     "ioredis": "^4.27.6",
     "next": "11.0.1",
+    "next-compose-plugins": "^2.2.1",
     "nextjs-redirect": "^5.0.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -32,6 +34,7 @@
   },
   "devDependencies": {
     "@lhci/cli": "^0.8.0",
+    "@types/inquirer": "^7.3.3",
     "@types/ioredis": "^4.26.4",
     "@types/lodash": "^4.14.170",
     "@types/node": "^15.12.5",
@@ -44,7 +47,9 @@
     "eslint": "^7.30.0",
     "eslint-config-next": "^11.0.1",
     "eslint-plugin-react": "^7.24.0",
+    "inquirer": "^8.1.1",
     "nodemon": "^2.0.8",
+    "playwright": "^1.12.3",
     "postcss": "^8.3.5",
     "tailwindcss": "^2.2.4",
     "ts-node": "^10.0.0",
