--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@sentry/node": "^6.8.0",
     "@sentry/tracing": "^6.8.0",
     "axios": "^0.21.1",
+    "clsx": "^1.1.1",
     "dotenv": "^10.0.0",
     "eris": "https://github.com/opalarchive/eris#merge",
     "events": "^3.3.0",
