--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,7 +37,15 @@
     "typeRoots": ["./src/typings/*.d.ts"],
     "forceConsistentCasingInFileNames": true,
     "isolatedModules": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "paths": {
+      "@classes/*": ["bot/classes/*"],
+      "@classes": ["bot/classes/index"],
+      "@utils/*": ["bot/utils/*"],
+      "@utils": ["bot/utils/index"],
+      "@commands/*": ["bot/commands/*"],
+      "@events/*": ["bot/events/*"]
+    }
   },
   "exclude": ["node_modules"],
   "include": ["src/**/*", "next-env.d.ts", "tailwind.config.js"]
