--- a/package.json
+++ b/package.json
@@ -3,14 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "yon generate && next build",
+    "dev": "concurrently -n 'bot,website,server' -c 'green,red,yellow' -i \"nodemon --config bot.nodemon.json\" \"next dev\" \"nodemon --config server.nodemon.json\"",
+    "build": "concurrently -n 'bot,website' -c 'green,red' -i \"tsc\" \"yon generate && next build\"",
     "start": "next start",
     "lint": "next lint",
-    "bot": "nodemon --config bot.nodemon.json",
+    "bot": "TS_NODE_PROJECT=tsconfig.prod.json node -r tsconfig-paths/register dist/bot/index.js",
     "ci": "install --frozen-lockfile",
-    "generate": "ts-node --files src/generate.ts",
-    "server": "nodemon --config server.nodemon.json"
+    "generate": "ts-node -r tsconfig-paths/register --files src/generate.ts"
   },
   "dependencies": {
     "@headlessui/react": "^1.3.0",
@@ -49,7 +48,7 @@
     "autoprefixer": "^10.2.6",
     "concurrently": "^6.2.0",
     "cross-env": "^7.0.3",
-    "discord-api-types": "^0.19.0-next.4a83629.1626438571",
+    "discord-api-types": "^0.19.0-next.4a83629.1626524897",
     "es-abstract": "^1.18.3",
     "eslint": "^7.30.0",
     "eslint-config-next": "^11.0.1",
@@ -60,6 +59,7 @@
     "postcss": "^8.3.5",
     "tailwindcss": "^2.2.4",
     "ts-node": "^10.0.0",
+    "tsconfig-paths": "^3.10.1",
     "typescript": "4.3.4",
     "yarn-or-npm": "^3.0.1"
   }
